Se agregan comandos para guardar tablas en containers para cada capa

--- a/ETL_Project_CarlosF/proceso/00_bronze_ingest_catalogs.ipynb
+++ b/ETL_Project_CarlosF/proceso/00_bronze_ingest_catalogs.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "4464a3e7-0eaa-4f95-9e1d-8751134de913",
      "showTitle": false,
@@ -43,7 +46,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "f63f6be4-c235-46df-8a44-e3441e6b6c1a",
      "showTitle": false,
@@ -128,7 +134,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "77c430ca-8a3f-4bf4-94c5-b9e41f28089d",
      "showTitle": false,
@@ -181,7 +190,7 @@
    "widgets": {
     "catalog": {
      "currentValue": "catalog_project",
-     "nuid": "4b6b0474-f543-491c-800b-8e569aca5749",
+     "nuid": "4c246475-26c0-401f-ab0d-734f3982a371",
      "typedWidgetInfo": {
       "autoCreated": false,
       "defaultValue": "catalog_project",
@@ -200,14 +209,14 @@
       "name": "catalog",
       "options": {
        "widgetType": "text",
-       "autoCreated": null,
+       "autoCreated": false,
        "validationRegex": null
       }
      }
     },
     "container": {
      "currentValue": "raw",
-     "nuid": "966e293a-1eb5-473c-9e8e-a804a044e203",
+     "nuid": "d4338f84-5839-4849-81d2-be4e329f815f",
      "typedWidgetInfo": {
       "autoCreated": false,
       "defaultValue": "raw",
@@ -226,14 +235,14 @@
       "name": "container",
       "options": {
        "widgetType": "text",
-       "autoCreated": null,
+       "autoCreated": false,
        "validationRegex": null
       }
      }
     },
     "schema": {
      "currentValue": "bronze",
-     "nuid": "6e0e2ef5-38e9-40b0-baa2-36058f443e59",
+     "nuid": "44978e8d-cdfd-450e-ad02-6e30f2c2e47e",
      "typedWidgetInfo": {
       "autoCreated": false,
       "defaultValue": "bronze",
@@ -252,14 +261,14 @@
       "name": "schema",
       "options": {
        "widgetType": "text",
-       "autoCreated": null,
+       "autoCreated": false,
        "validationRegex": null
       }
      }
     },
     "storageName": {
      "currentValue": "storageaccountcf9603",
-     "nuid": "a312487b-6d66-4afe-b916-982f77ad972b",
+     "nuid": "cbaa7e83-1b92-441c-bc3b-bfff54d44b04",
      "typedWidgetInfo": {
       "autoCreated": false,
       "defaultValue": "storageaccountcf9603",
@@ -278,7 +287,7 @@
       "name": "storageName",
       "options": {
        "widgetType": "text",
-       "autoCreated": null,
+       "autoCreated": false,
        "validationRegex": null
       }
      }
