--- a/ETL_Project_CarlosF/proceso/01_bronze_hybrid_manufacturing_categorical.ipynb
+++ b/ETL_Project_CarlosF/proceso/01_bronze_hybrid_manufacturing_categorical.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "27eba619-7dc2-4314-87d3-ab6e9e20cfe7",
      "showTitle": false,
@@ -42,7 +45,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "5ce41ae6-8a9d-4888-bc34-69a2dbcf246b",
      "showTitle": false,
@@ -84,7 +90,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "7fc3afc2-129c-425b-8882-3cee5e1acc6e",
      "showTitle": false,
@@ -124,7 +133,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "28887722-f8e6-4ec8-aa64-a50fde72b286",
      "showTitle": false,
@@ -162,7 +174,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "05ebf367-e76d-4924-8e6c-4a8d7d126502",
      "showTitle": false,
@@ -235,7 +250,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "eb6e1d91-66e9-4757-a7ae-3aff0e3ab724",
      "showTitle": false,
@@ -279,7 +297,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "a2c9efb2-dc27-4e53-bca3-42ad3d08ec11",
      "showTitle": false,
@@ -313,9 +334,17 @@
     "\n",
     "(df_hybrid.write\n",
     " .mode(\"overwrite\")\n",
-    " .option(\"overwriteSchema\", \"true\")   # útil si la tabla ya existía con otro tipo\n",
+    " .option(\"overwriteSchema\", \"true\")   \n",
     " .format(\"delta\")\n",
     " .saveAsTable(target_table)\n",
+    ")\n",
+    "\n",
+    "target_path = \"abfss://bronze@storageaccountcf9603.dfs.core.windows.net/bronze_hybrid_manufacturing\"\n",
+    "\n",
+    "(df_hybrid.write\n",
+    "  .format(\"delta\")\n",
+    "  .mode(\"overwrite\")   # o \"append\"\n",
+    "  .save(target_path)\n",
     ")"
    ]
   },
@@ -323,7 +352,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "8c51c76e-3c0c-4263-8bf1-829e202c0845",
      "showTitle": false,
@@ -400,7 +432,7 @@
       "name": "catalog",
       "options": {
        "widgetType": "text",
-       "autoCreated": false,
+       "autoCreated": null,
        "validationRegex": null
       }
      }
@@ -426,7 +458,7 @@
       "name": "container",
       "options": {
        "widgetType": "text",
-       "autoCreated": false,
+       "autoCreated": null,
        "validationRegex": null
       }
      }
@@ -452,7 +484,7 @@
       "name": "schema",
       "options": {
        "widgetType": "text",
-       "autoCreated": false,
+       "autoCreated": null,
        "validationRegex": null
       }
      }
@@ -478,7 +510,7 @@
       "name": "storageName",
       "options": {
        "widgetType": "text",
-       "autoCreated": false,
+       "autoCreated": null,
        "validationRegex": null
       }
      }
