--- a/ETL_Project_CarlosF/proceso/01_bronze_manufacturing_defect_dataset.ipynb
+++ b/ETL_Project_CarlosF/proceso/01_bronze_manufacturing_defect_dataset.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "9468e64e-cd41-4b4d-909c-21a5dc455fe5",
      "showTitle": false,
@@ -42,7 +45,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "5d6df109-8c2f-4d31-8bb8-1e61d991be7c",
      "showTitle": false,
@@ -84,7 +90,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "cc631a71-f82c-4c85-9422-2aef6e8a185f",
      "showTitle": false,
@@ -124,7 +133,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "c9545ccf-8664-42aa-857b-4969e50c41a6",
      "showTitle": false,
@@ -162,7 +174,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "0efe43e7-7ef1-4785-a38f-d532e621a139",
      "showTitle": false,
@@ -200,7 +215,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "da79c98b-e6bf-4ec6-9618-4c39e45d4f05",
      "showTitle": false,
@@ -255,7 +273,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "314a122e-2d80-4bb3-9598-fae59d8182ab",
      "showTitle": false,
@@ -299,7 +320,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "8b94b8ba-2a38-4424-8d6e-7f0e1ffb8ac0",
      "showTitle": false,
@@ -336,6 +360,14 @@
     " .option(\"overwriteSchema\", \"true\")\n",
     " .format(\"delta\")\n",
     " .saveAsTable(target_table)\n",
+    ")\n",
+    "\n",
+    "target_path = \"abfss://bronze@storageaccountcf9603.dfs.core.windows.net/bronze_defects\"\n",
+    "\n",
+    "(df_defects.write\n",
+    "  .format(\"delta\")\n",
+    "  .mode(\"overwrite\")   # o \"append\"\n",
+    "  .save(target_path)\n",
     ")"
    ]
   },
@@ -343,7 +375,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "3bce35e3-fc58-4f4c-a739-82acddc923b6",
      "showTitle": false,
@@ -438,7 +473,7 @@
       "name": "catalog",
       "options": {
        "widgetType": "text",
-       "autoCreated": false,
+       "autoCreated": null,
        "validationRegex": null
       }
      }
@@ -464,7 +499,7 @@
       "name": "container",
       "options": {
        "widgetType": "text",
-       "autoCreated": false,
+       "autoCreated": null,
        "validationRegex": null
       }
      }
@@ -490,7 +525,7 @@
       "name": "schema",
       "options": {
        "widgetType": "text",
-       "autoCreated": false,
+       "autoCreated": null,
        "validationRegex": null
       }
      }
@@ -516,7 +551,7 @@
       "name": "storageName",
       "options": {
        "widgetType": "text",
-       "autoCreated": false,
+       "autoCreated": null,
        "validationRegex": null
       }
      }
