--- a/ETL_Project_CarlosF/proceso/02_silver_hybrid_manufacturing_categorical.ipynb
+++ b/ETL_Project_CarlosF/proceso/02_silver_hybrid_manufacturing_categorical.ipynb
@@ -30,7 +30,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "6e0e7bc4-db52-4799-bec1-b7be4a97fbd0",
      "showTitle": false,
@@ -118,7 +121,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "6e6db73d-0006-42af-844a-2c995609b062",
      "showTitle": false,
@@ -155,7 +161,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "61e58e95-7c08-4f80-81ca-11a7e9c88fff",
      "showTitle": false,
@@ -221,7 +230,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "190895b4-a791-420c-bd97-143ca132ef0b",
      "showTitle": false,
@@ -270,7 +282,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "6d364260-8b6e-4edd-8a85-088366e0cb5f",
      "showTitle": false,
@@ -336,7 +351,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "710881d5-a157-4668-9ba1-53689227faa9",
      "showTitle": false,
@@ -404,7 +422,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "b01cb4b8-3aa8-447b-85f4-7a8614eb6ec7",
      "showTitle": false,
@@ -439,14 +460,68 @@
     " .option(\"overwriteSchema\", \"true\")\n",
     " .format(\"delta\")\n",
     " .saveAsTable(target_table)\n",
-    ")"
+    ")\n",
+    "\n",
+    "target_path = \"abfss://silver@storageaccountcf9603.dfs.core.windows.net/transform_hybrid\"\n",
+    "\n",
+    "(df_silver.write\n",
+    "  .format(\"delta\")\n",
+    "  .mode(\"overwrite\")   # o \"append\"\n",
+    "  .save(target_path)\n",
+    ")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "9ce974e7-6d99-4ec3-bdb3-acee7a5249a8",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "spark.conf.get(\"fs.azure.account.key.storageaccountcf9603.dfs.core.windows.net\", \"NO_EXISTE\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "cf0fdc83-7b62-4beb-b636-4971e66d8734",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "CREATE STORAGE CREDENTIAL sc_storageaccountcf9603\n",
+    "WITH AZURE_MANAGED_IDENTITY\n",
+    "MANAGED_IDENTITY 'my_access_connector';\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "70ce8659-2266-4fd8-98ac-6d9156aeb222",
      "showTitle": false,
