--- a/ETL_Project_CarlosF/proceso/02_silver_manufacturing_defect_dataset.ipynb
+++ b/ETL_Project_CarlosF/proceso/02_silver_manufacturing_defect_dataset.ipynb
@@ -31,7 +31,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "1ff3fb49-9ba2-473c-ac02-59bfd2338b72",
      "showTitle": false,
@@ -119,7 +122,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "7df20f98-320b-4569-9147-31277ef57357",
      "showTitle": false,
@@ -156,7 +162,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "7bbf4d7d-396a-4c64-b8e3-62aca8a27643",
      "showTitle": false,
@@ -208,7 +217,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "15a270bd-44b3-4abc-939a-7910b4bc55fb",
      "showTitle": false,
@@ -280,7 +292,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "5a1ef1e4-b313-486c-b89d-7214117f122e",
      "showTitle": false,
@@ -343,7 +358,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "ec2b0b3b-8757-4f30-8962-1e0711c958e8",
      "showTitle": false,
@@ -359,7 +377,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "e845078e-218e-4e8a-86e1-98eb76819832",
      "showTitle": false,
@@ -394,14 +415,25 @@
     " .option(\"overwriteSchema\", \"true\")\n",
     " .format(\"delta\")\n",
     " .saveAsTable(target_table)\n",
-    ")"
+    ")\n",
+    "\n",
+    "target_path = \"abfss://silver@storageaccountcf9603.dfs.core.windows.net/transform_defects\"\n",
+    "\n",
+    "(df_silver.write\n",
+    "  .format(\"delta\")\n",
+    "  .mode(\"overwrite\")   # o \"append\"\n",
+    "  .save(target_path)\n",
+    ")\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "50fcf0eb-9564-40f5-9263-5710b4c65f25",
      "showTitle": false,
@@ -472,7 +504,7 @@
       "name": "bronze_schema",
       "options": {
        "widgetType": "text",
-       "autoCreated": false,
+       "autoCreated": null,
        "validationRegex": null
       }
      }
@@ -498,7 +530,7 @@
       "name": "catalog",
       "options": {
        "widgetType": "text",
-       "autoCreated": false,
+       "autoCreated": null,
        "validationRegex": null
       }
      }
@@ -524,7 +556,7 @@
       "name": "silver_schema",
       "options": {
        "widgetType": "text",
-       "autoCreated": false,
+       "autoCreated": null,
        "validationRegex": null
       }
      }
