--- a/ETL_Project_CarlosF/scripts/00_setup_environment.ipynb
+++ b/ETL_Project_CarlosF/scripts/00_setup_environment.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "00e218ef-418e-44b2-869e-85579f284625",
      "showTitle": false,
@@ -64,7 +67,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "53475435-a4ed-4311-8010-32df28213ffb",
      "showTitle": false,
@@ -148,7 +154,7 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "CREATE EXTERNAL LOCATION IF NOT EXISTS `exlt-bronze`\n",
+    "CREATE EXTERNAL LOCATION IF NOT EXISTS `ext-bronze`\n",
     "URL 'abfss://bronze@${storageName}.dfs.core.windows.net/'\n",
     "WITH (STORAGE CREDENTIAL sc_adls_project)\n",
     "COMMENT 'Ubicación externa para tablas bronze'"
@@ -174,7 +180,7 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "CREATE EXTERNAL LOCATION IF NOT EXISTS `exlt-silver`\n",
+    "CREATE EXTERNAL LOCATION IF NOT EXISTS `ext-silver`\n",
     "URL 'abfss://silver@${storageName}.dfs.core.windows.net/'\n",
     "WITH (STORAGE CREDENTIAL sc_adls_project)\n",
     "COMMENT 'Ubicación externa para tablas silver'"
@@ -200,8 +206,8 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "CREATE EXTERNAL LOCATION IF NOT EXISTS `exlt-golden`\n",
-    "URL 'abfss://golden@${storageName}.dfs.core.windows.net/'\n",
+    "CREATE EXTERNAL LOCATION IF NOT EXISTS `ext-gold`\n",
+    "URL 'abfss://gold@${storageName}.dfs.core.windows.net/'\n",
     "WITH (STORAGE CREDENTIAL sc_adls_project)\n",
     "COMMENT 'Ubicación externa para tablas golden'"
    ]
@@ -210,7 +216,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "23f315b6-4c4e-4b50-9404-dc62264c8caa",
      "showTitle": false,
@@ -251,7 +260,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "db15bc58-6a32-4675-a3b3-26c020e508d6",
      "showTitle": false,
@@ -325,7 +337,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 6936534761617526,
+     "commandId": 6936534761617522,
      "dataframes": [
       "_sqldf"
      ]
@@ -336,7 +348,7 @@
    "widgets": {
     "storageName": {
      "currentValue": "storageaccountcf9603",
-     "nuid": "67198f23-510b-4234-b71c-5a31058061c8",
+     "nuid": "cf521616-d58c-474f-9675-56867f3a703d",
      "typedWidgetInfo": {
       "autoCreated": false,
       "defaultValue": "storageaccountcf9603",
