--- a/ETL_Project_CarlosF/proceso/03_gold_manufacturing_defects.ipynb
+++ b/ETL_Project_CarlosF/proceso/03_gold_manufacturing_defects.ipynb
@@ -31,7 +31,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "4a1adeb8-efd8-4a8e-82b1-df5aa8c8e22f",
      "showTitle": false,
@@ -95,7 +98,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "25e01475-96f5-4180-9b39-10e2eb9a220c",
      "showTitle": false,
@@ -135,7 +141,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "1b14596d-5be1-4a65-a3da-655c7af6bb92",
      "showTitle": false,
@@ -172,7 +181,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "ffb6760e-05c3-47bf-bb94-096e01cc88b5",
      "showTitle": false,
@@ -225,7 +237,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "ddfd0253-a761-45d9-aa64-eac61fd3742c",
      "showTitle": false,
@@ -260,6 +275,14 @@
     " .option(\"overwriteSchema\", \"true\")\n",
     " .format(\"delta\")\n",
     " .saveAsTable(target_table)\n",
+    ")\n",
+    "\n",
+    "target_path = \"abfss://gold@storageaccountcf9603.dfs.core.windows.net/gold_defects1\"\n",
+    "\n",
+    "(df_gold.write\n",
+    "  .format(\"delta\")\n",
+    "  .mode(\"overwrite\")   # o \"append\"\n",
+    "  .save(target_path)\n",
     ")"
    ]
   },
@@ -267,7 +290,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "eadca0a1-b304-4f60-9c8a-f1f85de3c28d",
      "showTitle": false,
